# os

./: CMakeLists.txt  PageManager.cpp  PageManager.h  VMM.cpp  boot.S  boot.cpp  build.sh  debug.cpp  interrupts.S  interrupts.cpp  kmm.cpp  linker.ld  loader.cpp  multiboot.cpp  new.cpp  pmm.cpp  registers.cpp  scheduler.cpp  spinlock.cpp  string.cpp  string.h  syscall.cpp  vfs.cpp  vmm.cpp
disk/: grub.cfg  launch.sh  main.cpp  setup.sh
driver/: ahci.cpp  block.cpp  fat32.cpp  nvme.cpp  pci.cpp
include/: CMakeLists.include  PageManager.h  Thread.h  VMM.h  acpi.cppm  acpi.h  asm.cppm  asm.h  debug.cppm  debug.h  elf.h  gdt.cppm  gdt.h  interrupts.cppm  interrupts.h  kmalloc.h  kmm.cppm  kmm.h  knew.cppm  loader.cppm  mpt.cppm  mpt.h  msr.cppm  msr.h  multiboot.cppm  multiboot.h  new.h  pmm.cppm  pmm.h  registers.cppm  registers.h  scheduler.cppm  scheduler.h  spinlock.h  stddef.h  stdint.h  string.cppm  string.h  sync.cppm  sync.h  (+9 more)
include/containers/: array.cppm  array.h
include/driver/: ahci.cppm  ahci.h  block.cppm  block.h  fat32.cppm  fat32.h  nvme.cppm  nvme.h  pci.cppm  pci.h
userspace/: CMakeLists.txt  hello_c.c  hello_cpp.cpp  init.c  linker.ld
userspace/stdlib/: crt0.S
userspace/stdlib/include/: stdint.h  stdio.h  stdlib.h  syscall.h
userspace/stdlib/src/: cpp_support.cpp  stdio.cpp  stdlib.cpp  syscall.S
